# vs-temp-ref-method-invoke

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README  README.md  bootstrap.ps1  install-deps.ps1  packages.txt
vs-temp-ref-method-invoke/: CMakeLists.txt  vs-temp-ref-method-invoke.cpp  vs-temp-ref-method-invoke.h
